# eesunhong

./: .cirrus.yml  .gitignore  .readthedocs.yaml  CMakeLists.txt  Cargo.toml  build.sh  clean.sh  environment.yml  license.md  pyproject.toml  readme.md
.github/workflows/: build_wheels.yml
cmake/: fetchStdlib.cmake  fetchVbbl.cmake  install.cmake  skipBuildBranch.cmake
docs/source/: conf.py  index.md  index.rst
docs/source/developer_guides/: guide_for_fortran_developers.md  index.md
docs/source/guides/: guide_for_fortran_developers.rst
docs/source/user_guides/: customized_metropolis_algorithm.md  data_source_considerations.md  file_explanations.md  fitting_troubleshooting.md  grid_search.md  how_to_run_eesunhong.md  index.md  light_curve_analysis_steps.md  naming_rules.md  useful_links_for_microlensing.md
eesunhong/: __init__.py  eesunhong.py  eesunhong_real_complex_conversion.f90  eesunhong_recipes_replacements.f90  fcnrvg4_Ctpar.f  microcurve_rvg4Ctpar.f
grackle/: __init__.py  bilens.f  fcnrvg4_Ctpar.f  geo_par.f  grackle_recipes_replacements.f90  grackle_recipes_wrappers.f90  hexadec_only.f  main.f  microcurve_rvg4Ctpar.f  microcurve_rvg4Rtpar.f  pygrackle.py
minuit_torbtpar_rvgMagsclast1/: fcnr_orb_tpar_Magsclast1.f  trilens.f
minuit_torbtpar_rvgMagsclast1/src/: fcnr_orb_tpar_Magsclast1.f  trilens.f
src/: bilens.f  critical.f  eesunhong_astropy_interface.f90  eesunhong_geo_par_c_wrapper.f90  eesunhong_recipes_replacements.f90  eesunhong_vbbl_interface.f90  fcnrvg4_Ctpar.f  fcnrvg4_Rtpar.f  hexadec_only.f  lib.rs  main.f  microcurve_rvg4Ctpar.f  microcurve_rvg4Rtpar.f
src/eesunhong/: eesunhong.py  main.py  python_module.py
tests/: __init__.py
tests/end_to_end_tests/: overwrite_expected_with_completed.py  run_directory_manipulations.py
tests/end_to_end_tests/advanced_dseek/expected_resulting_run_directory/: resid.run_1  run_1.in  run_1.out  run_2.in
tests/end_to_end_tests/advanced_dseek/run_directory/: lcMB20208.fco
tests/end_to_end_tests/advanced_oseek_step0/: test_advanced_oseek_step0.py
tests/end_to_end_tests/advanced_oseek_step0/expected_resulting_run_directory/: lcMB20208.kko  lcMB20208.moa2r  resid.run_1  run_1.out  run_2.in
tests/end_to_end_tests/advanced_oseek_step0/run_directory/: lcMB20208.pos35  lcMB20208.saao  run_1.in
tests/end_to_end_tests/advanced_oseek_step1/: test_advanced_oseek_step1.py
tests/end_to_end_tests/advanced_oseek_step1/expected_resulting_run_directory/: lcMB20208.kmtI  lcMB20208.moa2v  lcMB20208.pos  resid.run_1  run_1.out  run_2.in
tests/end_to_end_tests/advanced_scan/: test_advanced_scan.py
tests/end_to_end_tests/advanced_scan/expected_resulting_run_directory/: resid.run_1  run_1.in  run_1.out  run_2.in
tests/end_to_end_tests/advanced_scan/run_directory/: parMB20208
tests/end_to_end_tests/basic_dseek/: test_basic_dseek.py
tests/end_to_end_tests/basic_dseek/expected_resulting_run_directory/: run_1.in  run_1.out  run_2.in
tests/end_to_end_tests/basic_oseek_step0/expected_resulting_run_directory/: parOB06332  run_1.in  run_1.out  run_2.in
tests/end_to_end_tests/basic_oseek_step0/run_directory/: lcOB06332.ogleI
tests/end_to_end_tests/basic_oseek_step1/expected_resulting_run_directory/: resid.run_1  run_1.in  run_1.out  run_2.in
tests/end_to_end_tests/basic_scan/: test_basic_scan.py
tests/end_to_end_tests/basic_scan/expected_resulting_run_directory/: run_1.out  run_2.in
tests/end_to_end_tests/binary_lens/advanced_dseek/: test_advanced_dseek.py
tests/end_to_end_tests/binary_lens/advanced_dseek/expected_resulting_run_directory/: resid.run_1  run_1.out  run_2.in
tests/end_to_end_tests/binary_lens/advanced_dseek/run_directory/: lcMB20208.auck  lcMB20208.omegai
tests/end_to_end_tests/binary_lens/advanced_oseek_step0/expected_resulting_run_directory/: resid.run_1  run_2.in
tests/end_to_end_tests/binary_lens/advanced_oseek_step0/run_directory/: lcMB20208.pest
tests/end_to_end_tests/binary_lens/advanced_oseek_step1/expected_resulting_run_directory/: lcMB20208.kum  resid.run_1  run_1.out
tests/end_to_end_tests/binary_lens/advanced_oseek_step1/template_run_directory/: lcMB20208.omegag  run_1.in
tests/end_to_end_tests/binary_lens/advanced_scan/expected_resulting_run_directory/: lcMB20208.tur  resid.run_1  run_2.in
tests/end_to_end_tests/binary_lens/basic_dseek/expected_resulting_run_directory/: resid.run_1  run_1.out
tests/end_to_end_tests/binary_lens/basic_oseek_step0/: test_basic_oseek_step0.py
tests/end_to_end_tests/binary_lens/basic_oseek_step0/expected_resulting_run_directory/: run_2.in
tests/end_to_end_tests/binary_lens/basic_oseek_step1/: test_basic_oseek_step1.py
tests/end_to_end_tests/binary_lens/basic_oseek_step1/expected_resulting_run_directory/: resid.run_1
tests/end_to_end_tests/binary_lens/basic_scan/expected_resulting_run_directory/: resid.run_1  run_2.in
tests/end_to_end_tests/binary_lens/basic_scan/run_directory/: run_1.in
tests/end_to_end_tests/triple_lens/: executable_path.py
tests/end_to_end_tests/triple_lens/advanced_dseek/: test_advanced_dseek.py
tests/end_to_end_tests/triple_lens/advanced_dseek/expected_resulting_run_directory/: fort.2  lcMB09319ao.broni  lcMB09319ao.pali  resid.run_1  run_1.out  run_2.in
tests/end_to_end_tests/triple_lens/advanced_oseek_step0/: test_advanced_oseek.py  test_advanced_oseek_step0.py
tests/end_to_end_tests/triple_lens/advanced_oseek_step1/: test_advanced_oseek_step1.py
tests/end_to_end_tests/triple_lens/advanced_scan/: test_advanced_scan.py
tests/end_to_end_tests/triple_lens/basic_dseek/: test_basic_dseek.py
tests/end_to_end_tests/triple_lens/basic_oseek_step0/: test_basic_oseek_step0.py
tests/end_to_end_tests/triple_lens/basic_oseek_step1/: test_basic_oseek_step1.py
tests/end_to_end_tests/triple_lens/basic_scan/: test_basic_scan.py
tests/end_to_end_tests/triple_lens/short_advanced_dseek/: test_advanced_dseek.py
tests/unit_tests/: test_light_curve_sort_by_time.py  test_parallax_computation.py
tests/unit_tests/test_parallax_computation_resources/: coordinates.txt
(+60 files in other folders)
