[project]
name = "eesunhong"
version = "0.2.1"
requires-python = ">=3.8"

[project.scripts]
eesunhong_main = "eesunhong.main:main"

[build-system]
requires = ["scikit-build-core==0.6.0", "fypp==3.2"]
build-backend = "scikit_build_core.build"

[tool.cibuildwheel]
skip = "pp* cp36-* cp37-* *_i686"
build-verbosity = "3"
test-requires = ["pytest", "numpy"]
test-command = "pytest {package}/tests -m \"not slow\""

[tool.cibuildwheel.windows]
archs = ["auto64"]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel} --add-dll libgcc_s_seh-1.dll;libgfortran-5.dll;libquadmath-0.dll;libwinpthread-1.dll"

[tool.scikit-build]
build-dir = "build"

[tool.pytest.ini_options]
markers = [
    "slow: Marks tests as slow."
]
